--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <footer>
 
             <div class="footer_container">
-                    <a href='mailto:vinigbonifacio@gmail.com' target='_blank'> E-mail Desenvolvedor </a>
+                    <a href='mailto:vinigbonifacio@gmail.com' target='_blank'> E-mail do Desenvolvedor </a>
                 
             </div>
 
