--- a/index.html
+++ b/index.html
@@ -14,60 +14,83 @@
             }
 
         </style>
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
 
     <header>
-
         <div class="container-fluid bg-secondary border border-5 border-dark rounded-5"> 
-            <img src="./foto/menu_icone.png" alt="menu_logo" 
-            class = 'img-fluid'> 
-            <p class="fs-1 lead text-center"> Euconomos 
-
-            </p>
-        </div>
-        
+            <div class="row align-items-center">
+                <div class="col-auto">
+                    <div class="circle">
+                        <img src="./foto/menu_icone.png" alt="menu_logo" class = 'img-fluid'> 
+                    </div>
+                </div>
+                    <div class="col">
+                    <p class=" titulo fs-1 lead text-center"> Euconomos </p>
+                    </div>
+            </div>
+        </div>     
     </header>
 
-
-    
     <main>
 
         <div class="container-fluid bg-secondary border border-5 rounded-5">
-            <a href="pagina1.html"> 
-                <div class="circle"> 
-                <img src="./foto/gastos_icone.png" alt="Logo Gastos"
-                class = 'img-fluid'> 
-            </div> 
-            <p class="fs-4 lead text-center"> Gastos </p> 
-        </a> 
+            <a href="pagina1.html">
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <div class="circle">
+                            <img src="./foto/gastos_icone.png" alt="Logo Gastos" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <p class="item fs-4 lead text-center"> Gastos </p>
+                    </div>
+                </div>
+            </a>
         </div>
         <div class="container-fluid bg-secondary border border-5 rounded-5"> 
             <a href="pagina2.html">
-                 <div class="circle"> 
-                    <img src='./foto/recebimentos_icone.png' alt="Logo Recebimentos"
-                    class = 'img-fluid'> 
-                </div> 
-                <p class="fs-4 lead text-center"> Recebimentos </p>
-                 </a> 
-            </div>
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <div class="circle"> 
+                            <img src='./foto/recebimentos_icone.png' alt="Logo Recebimentos" class = 'img-fluid'> 
+                        </div> 
+                    </div>
+                    <div class="col">
+                        <p class=" item fs-4 lead text-center"> Recebimentos </p>
+                    </div>
+                </div>
+            </a> 
+        </div>
         <div class="container-fluid bg-secondary border border-5 rounded-5"> 
             <a href="pagina3.html"> 
-                <div class="circle"> 
-                    <img  src="./foto/historico_icone.png" alt="Logo Historico"
-                    class = 'img-fluid'> 
-                </div>  
-                <p class="fs-4 lead text-center"> Histórico </p>
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <div class="circle"> 
+                            <img src="./foto/historico_icone.png" alt="Logo Historico" class = 'img-fluid'> 
+                        </div>
+                    </div>  
+                    <div class="col">
+                        <p class=" item fs-4 lead text-center"> Histórico </p>
+                    </div>
+                </div>
             </a> 
-            </div>
+        </div>
+
         <div class="container-fluid bg-secondary border border-5 rounded-5"> 
             <a href="pagina4.html"> 
-                <div class="circle"> 
-                    <img src="./foto/pendencias_icone.png" alt="Logo Pendencias"
-                    class = 'img-fluid'> 
-                </div> 
-                <p class="fs-4 lead text-center"> Pendências </p> 
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <div class="circle"> 
+                            <img src="./foto/pendencias_icone.png" alt="Logo Pendencias" class = ' img-fluid'> 
+                        </div>
+                    </div>
+                    <div class="col">
+                        <p class=" item fs-4 lead text-center"> Pendências </p>
+                    </div>
+                </div>  
             </a> 
             </div>
 
