atualizacao_entrega_trabalho

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="row align-items-center">
                 <div class="col-auto">
                     <div class="circle">
-                        <img src="./foto/menu_icone.png" alt="menu_logo" class = 'img-fluid'> 
+                        <a href="tela_de_menu.html" class="menu-btn">
+                            <img src="./foto/menu_icone.png" alt="menu_logo" class = 'img-fluid'>
+                        </a>     
                     </div>
                 </div>
                     <div class="col">
@@ -36,7 +38,7 @@
 
     <main>
 
-        <div class="container-fluid bg-secondary border border-5 rounded-5">
+        <div class="opcao container-fluid bg-secondary border border-5 rounded-5">
             <a href="pagina1.html">
                 <div class="row align-items-center">
                     <div class="col-auto">
@@ -50,7 +52,7 @@
                 </div>
             </a>
         </div>
-        <div class="container-fluid bg-secondary border border-5 rounded-5"> 
+        <div class=" opcao container-fluid bg-secondary border border-5 rounded-5"> 
             <a href="pagina2.html">
                 <div class="row align-items-center">
                     <div class="col-auto">
@@ -64,7 +66,7 @@
                 </div>
             </a> 
         </div>
-        <div class="container-fluid bg-secondary border border-5 rounded-5"> 
+        <div class="opcao container-fluid bg-secondary border border-5 rounded-5"> 
             <a href="pagina3.html"> 
                 <div class="row align-items-center">
                     <div class="col-auto">
@@ -79,12 +81,12 @@
             </a> 
         </div>
 
-        <div class="container-fluid bg-secondary border border-5 rounded-5"> 
+        <div class="opcao container-fluid bg-secondary border border-5 rounded-5"> 
             <a href="pagina4.html"> 
                 <div class="row align-items-center">
                     <div class="col-auto">
                         <div class="circle"> 
-                            <img src="./foto/pendencias_icone.png" alt="Logo Pendencias" class = ' img-fluid'> 
+                            <img src="./foto/pendencias_icone.png" alt="Logo Pendencias" class = 'img-fluid'> 
                         </div>
                     </div>
                     <div class="col">
@@ -100,11 +102,11 @@
         <footer>
 
             <div class="footer_container">
-                    <a href='mailto:vinigbonifacio@gmail.com' target='_blank'> E-mail do Desenvolvedor </a>
-                
+                    <a href='mailto:vinigbonifacio@gmail.com' target='_blank'> 
+                        <p> E-mail do Desenvolvedor </p> 
+                    </a>
             </div>
 
-            
         </footer>
 
 </body>
